--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -1834,12 +1834,12 @@ msgstr ""
 #: qcsrc/common/gametypes/gametype/duel/duel.qc:17
 #, c-format
 msgid "%s is often played with %s rules."
-msgstr ""
+msgstr "%s é muitas vezes jogado com as regras do %s."
 
 #: qcsrc/common/gametypes/gametype/duel/duel.qc:17
 #: qcsrc/menu/xonotic/guide/pages.qc:183 qcsrc/menu/xonotic/guide/pages.qc:186
 msgid "XPM"
-msgstr ""
+msgstr "XPM"
 
 #: qcsrc/common/gametypes/gametype/duel/duel.qh:9
 msgid "Duel"
@@ -1856,6 +1856,10 @@ msgid ""
 "need to be unfrozen to re-enter the round. The round ends when all players "
 "from all opposing teams are frozen, scoring the remaining team a point."
 msgstr ""
+"%s é um tipo de jogo em rodadas e com equipes, no qual as vítimas ficam "
+"congeladas e precisam ser degeladas para poderem voltar a jogar. A rodada "
+"acaba quando todos os jogadores de todas as equipes, exceto uma, ficarem "
+"congelados, o que fará a equipe restante receber um ponto."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:10
 msgid ""
@@ -1864,6 +1868,11 @@ msgid ""
 "damaging frozen players on the other team helps unfreeze them, so it is best "
 "to try to avoid doing that."
 msgstr ""
+"Os jogadores congelados se degelam lentamente por conta própria, mas eles "
+"degelam muito mais rapidamente quando forem \"reanimados\" por um colega de "
+"equipe que esteja adjacente. Adicionalmente, causar dano em jogadores "
+"congelados de outra equipe ajuda-os serem degelados, logo é melhor evitar "
+"fazer isso."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:12
 msgid ""
@@ -1871,6 +1880,9 @@ msgid ""
 "grace period where weapons cannot be fired, meaning it's a good opportunity "
 "to grab as many pickups as you can."
 msgstr ""
+"Assim como em muitos outros tipos de jogos em rodadas, as rodadas iniciam "
+"com um cessar-fogo de dez segundos, o que é uma boa oportunidade para "
+"coletar o máximo de itens que você conseguir."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:13
 msgid ""
@@ -1881,6 +1893,12 @@ msgid ""
 "especially while frozen, so you can let your teammates know where the "
 "enemies are."
 msgstr ""
+"Reanimar furtivamente um colega de equipe vai trazê-lo de volta à rodada "
+"visando à superioridade numérica de sua equipe, mas isso deve ser feito com "
+"cuidado já que muitas vezes inimigos se atentam a jogadores congelados para "
+"não deixar serem reanimados. Por isso, é importante uma boa comunicação de "
+"equipe, especialmente quando congelado, para seus colegas saberem por onde "
+"os inimigos andam."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qh:15
 msgid "Freeze Tag"
@@ -1903,11 +1921,18 @@ msgid ""
 "from each other. The player who frags the most monsters overall wins the "
 "match."
 msgstr ""
+"%s é um tipo único de jogo em rodadas no qual uma horda de monstros surge "
+"pelo mapa e os jogadores devem tentar executar o maior número possível "
+"deles. Já que os jogadores não podem causar dano uns aos outros, eles então "
+"tentam furtar as vítimas dos outros. Vence quem executar o maior número de "
+"monstros somando todas as rodadas."
 
 #: qcsrc/common/gametypes/gametype/invasion/invasion.qc:11
 msgid ""
 "A round ends when either all monsters are fragged, or after a time limit."
 msgstr ""
+"Uma rodada acaba quando todos os monstros tiverem sido executados ou quando "
+"o tempo acabar."
 
 #: qcsrc/common/gametypes/gametype/invasion/invasion.qh:8
 msgid "Invasion"
@@ -1923,6 +1948,8 @@ msgid ""
 "%s is a free-for-all match where a ball spawns randomly on the map and the "
 "goal is to hold the ball for as long as possible."
 msgstr ""
+"%s é um jogo de cada um por si no qual uma bola surge em um ponto aleatório "
+"do mapa e o objetivo é segurá-la o maior tempo possível."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qc:11
 msgid ""
@@ -1930,6 +1957,9 @@ msgid ""
 "when you frag the ball carrier. The first player to reach the score limit "
 "will win the match."
 msgstr ""
+"Sua pontuação aumenta quando executar um outro jogador enquanto você ou o "
+"outro estiver segurando a bola. O primeiro jogador a atingir o limite de "
+"pontos vence o jogo."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qc:13
 msgid ""
@@ -1937,6 +1967,9 @@ msgid ""
 "anyone is able to pick it up. If nobody picks it up after some time it will "
 "get bored and teleport itself elsewhere."
 msgstr ""
+"Quando o portador da bola for executado, a bola cairá no chão e qualquer um "
+"poderá pegá-la. Se ninguém a pegar, depois de um tempo a bola ficará "
+"entediada e se teletransportará a outro lugar."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qc:15
 #, c-format
@@ -1944,6 +1977,8 @@ msgid ""
 "%s rewards good fragging but also good movement, since the better you can "
 "evade attacks, the longer you can keep the ball."
 msgstr ""
+"%s recompensa boas execuções e também bom movimento, porque, quanto melhor "
+"você evadir ataques, mais tempo ficará com a bola."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qh:11
 msgid "Hold the ball to get points for kills"
@@ -1962,6 +1997,11 @@ msgid ""
 "after a ten second period, and the location of all keys will be visible on "
 "the radar after a few seconds."
 msgstr ""
+"%s é um tipo de jogo em rodadas com algumas equipes, no qual cada equipe "
+"inicia com uma chave, e todas as chaves devem ser juntadas para vencer a "
+"rodada. O membro de equipe recebendo a chave no início da rodada é "
+"selecionado aleatoriamente depois de um período de dez segundos, e as "
+"posições de todas as chaves estarão visíveis no radar após alguns segundos."
 
 #: qcsrc/common/gametypes/gametype/keyhunt/keyhunt.qc:12
 #, c-format
@@ -1971,6 +2011,10 @@ msgid ""
 "other enemies. If a key is destroyed by being dropped into the void or a "
 "death trap, points are allocated accordingly."
 msgstr ""
+"A pontuação em %s é bem complicada, entrando na conta coletar todas as "
+"chaves, coletar uma chave, executar um inimigo portador de chave e executar "
+"outros inimigos. Se uma chave for destruída derrubando-a no vazio ou em uma "
+"armadilha mortal, pontos serão distribuídos adequadamente."
 
 #: qcsrc/common/gametypes/gametype/keyhunt/keyhunt.qc:14
 #, c-format
@@ -1978,6 +2022,8 @@ msgid ""
 "Like in %s the key can be dropped, so you can pass it to your teammates if "
 "you're running low on health."
 msgstr ""
+"Assim como em %s, você pode soltar a chave, para poder passá-la aos seus "
+"colegas de equipe quando você estiver com saúde baixa."
 
 #: qcsrc/common/gametypes/gametype/keyhunt/keyhunt.qh:11
 msgid "Gather all the keys to win the round"
@@ -2000,12 +2046,20 @@ msgid ""
 "health and armor do not regenerate, similar to gametypes like %s. Similarly, "
 "item pickups don't spawn on the map."
 msgstr ""
+"%s é um tipo de jogo de cada um por si, no qual todos os jogadores iniciam "
+"com um certo número de vidas e são eliminados do jogo assim que perderem "
+"todas as vidas. Os jogadores surgem com todas as armas disponíveis, saúde e "
+"armadura máximas, e a saúde e a armadura não se regeneram, assim como em "
+"tipos de jogos como %s. Similarmente, itens coletáveis não surgem no mapa."
 
 #: qcsrc/common/gametypes/gametype/lms/lms.qc:13
 msgid ""
 "Hiding is sometimes a viable strategy since if you can't be found you can't "
 "lose lives, but often you become a vulnerable target once discovered."
 msgstr ""
+"Esconder-se é às vezes uma estratégia viável porque você não pode perder "
+"vidas se ninguém o encontrar, mas muitas vezes você se torna um alvo "
+"vulnerável assim que for descoberto."
 
 #: qcsrc/common/gametypes/gametype/lms/lms.qc:14
 #, c-format
@@ -2015,6 +2069,11 @@ msgid ""
 "to prevent hiding too much. Players who aren't in the lead steal a small "
 "percentage of health when they attack leaders, like in the %s mutator."
 msgstr ""
+"Os jogadores liderando o jogo por pelo menos 2 vidas brilham e "
+"periodicamente são marcados em suas cabeças com pontos de interesse visíveis "
+"a todos os jogadores por alguns segundos para que não consigam se esconder. "
+"Os jogadores que não estão na liderança roubam uma pequena porcentagem de "
+"saúde quando atacarem os líderes, assim como no modificador de %s."
 
 #: qcsrc/common/gametypes/gametype/lms/lms.qh:11
 msgid "Last Man Standing"
@@ -2035,6 +2094,9 @@ msgid ""
 "available weapons and maximum health and armor. There are no pickups enabled "
 "on maps, but buffs are still available."
 msgstr ""
+"%s é um mata-mata ágil de cada um por si, no qual os jogadores surgem com "
+"todas as armas disponíveis e com saúde e armaduras máximas. Não há itens "
+"coletáveis ativados no mapa, mas bônus ainda são disponibilizados."
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qc:12
 msgid ""
@@ -2044,6 +2106,12 @@ msgid ""
 "if possible. Points are deducted when you walk into hazards, but not when "
 "you do movement tricks like blaster jumping since self damage is disabled."
 msgstr ""
+"Distingue-se por seu único sistema de pontuações, considerando execuções e "
+"também o dano causado. Isso significa que, se você quase executar um "
+"jogador, você ainda será recompensado com pontos, mas aplicar o último golpe "
+"é sempre melhor quando for possível. Pontos são descontados quando você "
+"andar sobre coisas perigosas, mas não quando fizer truques de movimento, "
+"como pulos com blaster, já que causar dano em si mesmo é desativado."
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qc:15
 #, c-format
@@ -2051,15 +2119,19 @@ msgid ""
 "Since damage is always rewarded in %s, the more you shoot the better, "
 "turning this gametype into chaotic fun at times."
 msgstr ""
+"Já que causar dano é sempre recompensado em %s, quando mais você atirar, "
+"melhor é, tornando este tipo de jogo às vezes uma diversão caótica."
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qc:16
 #, c-format
 msgid "This gametype is often seen as a more newbie-friendly version of %s."
 msgstr ""
+"Este tipo de jogo é muitas vezes visto como uma versão de %s mais amigável "
+"para novatos."
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qh:10
 msgid "Compete for the most damage dealt and frags in this chaotic mayhem"
-msgstr ""
+msgstr "Compita pelo máximo de dano e execuções neste alvoroço caótico"
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qh:10
 msgid "Mayhem"
@@ -2075,6 +2147,8 @@ msgstr "Qual a pontuação necessária para acabar a partida"
 msgid ""
 "%s is a fun ball sport game where 2 teams compete to score the most goals."
 msgstr ""
+"%s é um jogo divertido de esporte com bola, no qual 2 equipes competem pelo "
+"maior número de gols."
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qc:11
 #, c-format
@@ -2083,12 +2157,17 @@ msgid ""
 "kick it around, or basketball where players have a %s so can pass the ball "
 "and intercept passes."
 msgstr ""
+"%s é usualmente jogado ou como futebol, no qual os jogadores andam na bola "
+"para dar pontapés nela, ou como basquete, no qual os jogadores têm a arma %s "
+"para passar a bola e interceptar passes."
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qc:12
 msgid ""
 "Keep in mind players can score own goals, so don't embarrass yourself in "
 "front of your team!"
 msgstr ""
+"Tenha em mente que jogadores podem dar gol contra, logo não passe vergonha "
+"em frente de sua equipe!"
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qh:11
 msgid "Nexball"
@@ -2096,7 +2175,7 @@ msgstr "Bola Nex"
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qh:11
 msgid "Shoot and kick the ball into the enemy's goal, keep your goal clean"
-msgstr ""
+msgstr "Atire e chute a bola no gol inimigo e mantenha seu gol limpo"
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qh:25
 msgid "Goal limit:"
@@ -2307,6 +2386,7 @@ msgid ""
 "Compete with your team for the most damage dealt and frags in this chaotic "
 "mayhem"
 msgstr ""
+"Compita com sua equipe pelo máximo de dano e execuções neste alvoroço caótico"
 
 #: qcsrc/common/gametypes/gametype/tmayhem/tmayhem.qh:10
 msgid "Team Mayhem"
